--- a/tango-typing/package.json
+++ b/tango-typing/package.json
@@ -11,7 +11,9 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "eslint": "^5.16.0",
     "vue": "^2.6.14",
+    "vue-cookies": "^1.7.4",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
@@ -20,7 +22,6 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
   },
