--- a/tango-typing/package.json
+++ b/tango-typing/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "bootstrap": "^4.6.1",
+    "bootstrap-icons": "^1.7.2",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "eslint": "^5.16.0",
     "vue": "^2.6.14",
     "vue-cookies": "^1.7.4",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
