--- a/tango-typing/package.json
+++ b/tango-typing/package.json
@@ -13,10 +13,12 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "eslint": "^5.16.0",
+    "json-refs": "^3.0.15",
     "vue": "^2.6.14",
     "vue-cookies": "^1.7.4",
     "vue-router": "^3.2.0",
-    "vuedraggable": "^2.24.3"
+    "vuedraggable": "^2.24.3",
+    "xlsx": "^0.17.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
