--- a/tango-typing/package.json
+++ b/tango-typing/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-components": "^1.9.6",
+    "aws-amplify": "^4.3.17",
     "bootstrap": "^4.6.1",
     "bootstrap-icons": "^1.7.2",
     "bootstrap-vue": "^2.21.2",
@@ -18,6 +20,7 @@
     "vue-cookies": "^1.7.4",
     "vue-router": "^3.2.0",
     "vuedraggable": "^2.24.3",
+    "vuex": "^3.6.2",
     "xlsx": "^0.17.5"
   },
   "devDependencies": {
